--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
